scripts/include/notcurses.h

#define API __attribute__((visibility("default")))
#define API __declspec(dllexport)
#define ALLOC __attribute__((malloc)) __attribute__((warn_unused_result))
struct notcurses; 
struct ncplane;   
struct ncuplot;   
struct ncdplot;   
struct ncfdplane; 
struct ncsubproc; 
struct ncreader;  
struct nctab;     
struct nctabbed;  
typedef enum {
  NCBLIT_DEFAULT, 
  NCBLIT_1x1,     
  NCBLIT_2x1,     
  NCBLIT_2x2,     
  NCBLIT_3x2,     
  NCBLIT_BRAILLE, 
  NCBLIT_PIXEL,   
  NCBLIT_4x1,     
  NCBLIT_8x1,     
} ncblitter_e;
typedef enum {
  NCTYPE_UNKNOWN,
  NCTYPE_PRESS,
  NCTYPE_REPEAT,
  NCTYPE_RELEASE,
} ncintype_e;
typedef struct ncinput {
  uint32_t id;       
  int y, x;          
  char utf8[5];      
  bool alt;          
  bool shift;        
  bool ctrl;         
  ncintype_e evtype;
  unsigned modifiers;
  int ypx, xpx;      
} ncinput;
API void ncplane_set_resizecb(struct ncplane* n, int(*resizecb)(struct ncplane*));
API int (*ncplane_resizecb(const struct ncplane* n))(struct ncplane*);
typedef void (*tabcb)(struct nctab* t, struct ncplane* ncp, void* curry);
API void nctabbed_set_sepchan(struct nctabbed* nt, uint64_t chan)
  __attribute__ ((nonnull (1)));
API tabcb nctab_set_cb(struct nctab* t, tabcb newcb)
  __attribute__ ((nonnull (1)));
API int nctab_set_name(struct nctab* t, const char* newname)
  __attribute__ ((nonnull (1, 2)));
API void* nctab_set_userptr(struct nctab* t, void* newopaque)
  __attribute__ ((nonnull (1)));
API int nctabbed_set_separator(struct nctabbed* nt, const char* separator)
  __attribute__ ((nonnull (1, 2)));
typedef struct ncplot_options {
  uint64_t maxchannels;
  uint64_t minchannels;
  uint16_t legendstyle;
  ncblitter_e gridtype; 
  int rangex;
  const char* title;   
  uint64_t flags;      
} ncplot_options;
API ALLOC struct ncuplot* ncuplot_create(struct ncplane* n, const ncplot_options* opts,
                                         uint64_t miny, uint64_t maxy)
  __attribute__ ((nonnull (1)));
API ALLOC struct ncdplot* ncdplot_create(struct ncplane* n, const ncplot_options* opts,
                                         double miny, double maxy)
  __attribute__ ((nonnull (1)));
API struct ncplane* ncuplot_plane(struct ncuplot* n)
  __attribute__ ((nonnull (1)));
API struct ncplane* ncdplot_plane(struct ncdplot* n)
  __attribute__ ((nonnull (1)));
API int ncuplot_add_sample(struct ncuplot* n, uint64_t x, uint64_t y)
  __attribute__ ((nonnull (1)));
API int ncdplot_add_sample(struct ncdplot* n, uint64_t x, double y)
  __attribute__ ((nonnull (1)));
API int ncuplot_set_sample(struct ncuplot* n, uint64_t x, uint64_t y)
  __attribute__ ((nonnull (1)));
API int ncdplot_set_sample(struct ncdplot* n, uint64_t x, double y)
  __attribute__ ((nonnull (1)));
API int ncuplot_sample(const struct ncuplot* n, uint64_t x, uint64_t* y)
  __attribute__ ((nonnull (1)));
API int ncdplot_sample(const struct ncdplot* n, uint64_t x, double* y)
  __attribute__ ((nonnull (1)));
API void ncuplot_destroy(struct ncuplot* n);
API void ncdplot_destroy(struct ncdplot* n);
typedef int(*ncfdplane_callback)(struct ncfdplane* n, const void* buf, size_t s, void* curry);
typedef int(*ncfdplane_done_cb)(struct ncfdplane* n, int fderrno, void* curry);
typedef struct ncfdplane_options {
  void* curry;    
  bool follow;    
  uint64_t flags; 
} ncfdplane_options;
API ALLOC struct ncfdplane* ncfdplane_create(struct ncplane* n, const ncfdplane_options* opts,
                                             int fd, ncfdplane_callback cbfxn, ncfdplane_done_cb donecbfxn)
  __attribute__ ((nonnull (1)));
API struct ncplane* ncfdplane_plane(struct ncfdplane* n)
  __attribute__ ((nonnull (1)));
API int ncfdplane_destroy(struct ncfdplane* n);
typedef struct ncsubproc_options {
  void* curry;
  uint64_t restart_period; 
  uint64_t flags;          
} ncsubproc_options;
API ALLOC struct ncsubproc* ncsubproc_createv(struct ncplane* n, const ncsubproc_options* opts,
                                              const char* bin, const char* const arg[],
                                              ncfdplane_callback cbfxn, ncfdplane_done_cb donecbfxn)
  __attribute__ ((nonnull (1)));
API ALLOC struct ncsubproc* ncsubproc_createvp(struct ncplane* n, const ncsubproc_options* opts,
                                               const char* bin, const char* const arg[],
                                               ncfdplane_callback cbfxn, ncfdplane_done_cb donecbfxn)
  __attribute__ ((nonnull (1)));
API ALLOC struct ncsubproc* ncsubproc_createvpe(struct ncplane* n, const ncsubproc_options* opts,
                                                const char* bin, const char* const arg[],
                                                const char* const env[],
                                                ncfdplane_callback cbfxn, ncfdplane_done_cb donecbfxn)
  __attribute__ ((nonnull (1)));
API struct ncplane* ncsubproc_plane(struct ncsubproc* n)
  __attribute__ ((nonnull (1)));
API int ncsubproc_destroy(struct ncsubproc* n);
API int ncplane_qrcode(struct ncplane* n, unsigned* ymax, unsigned* xmax,
                       const void* data, size_t len)
  __attribute__ ((nonnull (1, 4)));
typedef struct ncreader_options {
  uint64_t tchannels; 
  uint32_t tattrword; 
  uint64_t flags;     
} ncreader_options;
API ALLOC struct ncreader* ncreader_create(struct ncplane* n, const ncreader_options* opts)
  __attribute__ ((nonnull (1)));
API int ncreader_clear(struct ncreader* n)
  __attribute__ ((nonnull (1)));
API struct ncplane* ncreader_plane(struct ncreader* n)
  __attribute__ ((nonnull (1)));
API bool ncreader_offer_input(struct ncreader* n, const ncinput* ni)
  __attribute__ ((nonnull (1, 2)));
API int ncreader_move_left(struct ncreader* n)
  __attribute__ ((nonnull (1)));
API int ncreader_move_right(struct ncreader* n)
  __attribute__ ((nonnull (1)));
API int ncreader_move_up(struct ncreader* n)
  __attribute__ ((nonnull (1)));
API int ncreader_move_down(struct ncreader* n)
  __attribute__ ((nonnull (1)));
API int ncreader_write_egc(struct ncreader* n, const char* egc)
  __attribute__ ((nonnull (1, 2)));
API char* ncreader_contents(const struct ncreader* n)
  __attribute__ ((nonnull (1)));
API void ncreader_destroy(struct ncreader* n, char** contents);
API ALLOC char* notcurses_accountname(void);
API ALLOC char* notcurses_hostname(void);
API ALLOC char* notcurses_osversion(void);
API void notcurses_debug(const struct notcurses* nc, FILE* debugfp)
  __attribute__ ((nonnull (1, 2)));