src/LibNotcurses.jl


function nctabbed_set_sepchan(nt, chan)
    ccall((:nctabbed_set_sepchan, notcurses), Cvoid, (Ptr{nctabbed}, UInt64), nt, chan)
end

function nctab_set_cb(t, newcb)
    ccall((:nctab_set_cb, notcurses), tabcb, (Ptr{nctab}, tabcb), t, newcb)
end

function nctab_set_name(t, newname)
    ccall((:nctab_set_name, notcurses), Cint, (Ptr{nctab}, Ptr{Cchar}), t, newname)
end

function nctab_set_userptr(t, newopaque)
    ccall((:nctab_set_userptr, notcurses), Ptr{Cvoid}, (Ptr{nctab}, Ptr{Cvoid}), t, newopaque)
end

function nctabbed_set_separator(nt, separator)
    ccall((:nctabbed_set_separator, notcurses), Cint, (Ptr{nctabbed}, Ptr{Cchar}), nt, separator)
end

struct ncplot_options
    maxchannels::UInt64
    minchannels::UInt64
    legendstyle::UInt16
    gridtype::ncblitter_e
    rangex::Cint
    title::Ptr{Cchar}
    flags::UInt64
end

function ncuplot_create(n, opts, miny, maxy)
    ccall((:ncuplot_create, notcurses), Ptr{ncuplot}, (Ptr{ncplane}, Ptr{ncplot_options}, UInt64, UInt64), n, opts, miny, maxy)
end

function ncdplot_create(n, opts, miny, maxy)
    ccall((:ncdplot_create, notcurses), Ptr{ncdplot}, (Ptr{ncplane}, Ptr{ncplot_options}, Cdouble, Cdouble), n, opts, miny, maxy)
end

function ncuplot_plane(n)
    ccall((:ncuplot_plane, notcurses), Ptr{ncplane}, (Ptr{ncuplot},), n)
end

function ncdplot_plane(n)
    ccall((:ncdplot_plane, notcurses), Ptr{ncplane}, (Ptr{ncdplot},), n)
end

function ncuplot_add_sample(n, x, y)
    ccall((:ncuplot_add_sample, notcurses), Cint, (Ptr{ncuplot}, UInt64, UInt64), n, x, y)
end

function ncdplot_add_sample(n, x, y)
    ccall((:ncdplot_add_sample, notcurses), Cint, (Ptr{ncdplot}, UInt64, Cdouble), n, x, y)
end

function ncuplot_set_sample(n, x, y)
    ccall((:ncuplot_set_sample, notcurses), Cint, (Ptr{ncuplot}, UInt64, UInt64), n, x, y)
end

function ncdplot_set_sample(n, x, y)
    ccall((:ncdplot_set_sample, notcurses), Cint, (Ptr{ncdplot}, UInt64, Cdouble), n, x, y)
end

function ncuplot_sample(n, x, y)
    ccall((:ncuplot_sample, notcurses), Cint, (Ptr{ncuplot}, UInt64, Ptr{UInt64}), n, x, y)
end

function ncdplot_sample(n, x, y)
    ccall((:ncdplot_sample, notcurses), Cint, (Ptr{ncdplot}, UInt64, Ptr{Cdouble}), n, x, y)
end

function ncuplot_destroy(n)
    ccall((:ncuplot_destroy, notcurses), Cvoid, (Ptr{ncuplot},), n)
end

function ncdplot_destroy(n)
    ccall((:ncdplot_destroy, notcurses), Cvoid, (Ptr{ncdplot},), n)
end

# typedef int ( * ncfdplane_callback ) ( struct ncfdplane * n , const void * buf , size_t s , void * curry )
const ncfdplane_callback = Ptr{Cvoid}

# typedef int ( * ncfdplane_done_cb ) ( struct ncfdplane * n , int fderrno , void * curry )
const ncfdplane_done_cb = Ptr{Cvoid}

struct ncfdplane_options
    curry::Ptr{Cvoid}
    follow::Bool
    flags::UInt64
end

function ncfdplane_create(n, opts, fd, cbfxn, donecbfxn)
    ccall((:ncfdplane_create, notcurses), Ptr{ncfdplane}, (Ptr{ncplane}, Ptr{ncfdplane_options}, Cint, ncfdplane_callback, ncfdplane_done_cb), n, opts, fd, cbfxn, donecbfxn)
end

function ncfdplane_plane(n)
    ccall((:ncfdplane_plane, notcurses), Ptr{ncplane}, (Ptr{ncfdplane},), n)
end

function ncfdplane_destroy(n)
    ccall((:ncfdplane_destroy, notcurses), Cint, (Ptr{ncfdplane},), n)
end

struct ncsubproc_options
    curry::Ptr{Cvoid}
    restart_period::UInt64
    flags::UInt64
end

function ncsubproc_createv(n, opts, bin, arg, cbfxn, donecbfxn)
    ccall((:ncsubproc_createv, notcurses), Ptr{ncsubproc}, (Ptr{ncplane}, Ptr{ncsubproc_options}, Ptr{Cchar}, Ptr{Ptr{Cchar}}, ncfdplane_callback, ncfdplane_done_cb), n, opts, bin, arg, cbfxn, donecbfxn)
end

function ncsubproc_createvp(n, opts, bin, arg, cbfxn, donecbfxn)
    ccall((:ncsubproc_createvp, notcurses), Ptr{ncsubproc}, (Ptr{ncplane}, Ptr{ncsubproc_options}, Ptr{Cchar}, Ptr{Ptr{Cchar}}, ncfdplane_callback, ncfdplane_done_cb), n, opts, bin, arg, cbfxn, donecbfxn)
end

function ncsubproc_createvpe(n, opts, bin, arg, env, cbfxn, donecbfxn)
    ccall((:ncsubproc_createvpe, notcurses), Ptr{ncsubproc}, (Ptr{ncplane}, Ptr{ncsubproc_options}, Ptr{Cchar}, Ptr{Ptr{Cchar}}, Ptr{Ptr{Cchar}}, ncfdplane_callback, ncfdplane_done_cb), n, opts, bin, arg, env, cbfxn, donecbfxn)
end

function ncsubproc_plane(n)
    ccall((:ncsubproc_plane, notcurses), Ptr{ncplane}, (Ptr{ncsubproc},), n)
end

function ncsubproc_destroy(n)
    ccall((:ncsubproc_destroy, notcurses), Cint, (Ptr{ncsubproc},), n)
end

function ncplane_qrcode(n, ymax, xmax, data, len)
    ccall((:ncplane_qrcode, notcurses), Cint, (Ptr{ncplane}, Ptr{Cuint}, Ptr{Cuint}, Ptr{Cvoid}, Csize_t), n, ymax, xmax, data, len)
end

struct ncreader_options
    tchannels::UInt64
    tattrword::UInt32
    flags::UInt64
end

function ncreader_create(n, opts)
    ccall((:ncreader_create, notcurses), Ptr{ncreader}, (Ptr{ncplane}, Ptr{ncreader_options}), n, opts)
end

function ncreader_clear(n)
    ccall((:ncreader_clear, notcurses), Cint, (Ptr{ncreader},), n)
end

function ncreader_plane(n)
    ccall((:ncreader_plane, notcurses), Ptr{ncplane}, (Ptr{ncreader},), n)
end

function ncreader_offer_input(n, ni)
    ccall((:ncreader_offer_input, notcurses), Bool, (Ptr{ncreader}, Ptr{ncinput}), n, ni)
end

function ncreader_move_left(n)
    ccall((:ncreader_move_left, notcurses), Cint, (Ptr{ncreader},), n)
end

function ncreader_move_right(n)
    ccall((:ncreader_move_right, notcurses), Cint, (Ptr{ncreader},), n)
end

function ncreader_move_up(n)
    ccall((:ncreader_move_up, notcurses), Cint, (Ptr{ncreader},), n)
end

function ncreader_move_down(n)
    ccall((:ncreader_move_down, notcurses), Cint, (Ptr{ncreader},), n)
end

function ncreader_write_egc(n, egc)
    ccall((:ncreader_write_egc, notcurses), Cint, (Ptr{ncreader}, Ptr{Cchar}), n, egc)
end

function ncreader_contents(n)
    ccall((:ncreader_contents, notcurses), Ptr{Cchar}, (Ptr{ncreader},), n)
end

function ncreader_destroy(n, contents)
    ccall((:ncreader_destroy, notcurses), Cvoid, (Ptr{ncreader}, Ptr{Ptr{Cchar}}), n, contents)
end

function notcurses_accountname()
    ccall((:notcurses_accountname, notcurses), Ptr{Cchar}, ())
end

function notcurses_hostname()
    ccall((:notcurses_hostname, notcurses), Ptr{Cchar}, ())
end

function notcurses_osversion()
    ccall((:notcurses_osversion, notcurses), Ptr{Cchar}, ())
end

function notcurses_debug(nc, debugfp)
    ccall((:notcurses_debug, notcurses), Cvoid, (Ptr{notcurses}, Ptr{Libc.FILE}), nc, debugfp)
end

# Skipping MacroDefinition: API __attribute__ ( ( visibility ( "default" ) ) )

# Skipping MacroDefinition: ALLOC __attribute__ ( ( malloc ) ) __attribute__ ( ( warn_unused_result ) )

const NCDIRECT_OPTION_INHIBIT_SETLOCALE = Culonglong(0x0001)

const NCDIRECT_OPTION_INHIBIT_CBREAK = Culonglong(0x0002)

const NCDIRECT_OPTION_DRAIN_INPUT = Culonglong(0x0004)

const NCDIRECT_OPTION_NO_QUIT_SIGHANDLERS = Culonglong(0x0008)

const NCDIRECT_OPTION_VERBOSE = Culonglong(0x0010)

const NCDIRECT_OPTION_VERY_VERBOSE = Culonglong(0x0020)

const PRETERUNICODEBASE = 1115000

preterunicode(w) = w + PRETERUNICODEBASE

const NCKEY_INVALID = preterunicode(0)

const NCKEY_RESIZE = preterunicode(1)

const NCKEY_UP = preterunicode(2)

const NCKEY_RIGHT = preterunicode(3)

const NCKEY_DOWN = preterunicode(4)

const NCKEY_LEFT = preterunicode(5)

const NCKEY_INS = preterunicode(6)

const NCKEY_DEL = preterunicode(7)

const NCKEY_BACKSPACE = preterunicode(8)

const NCKEY_PGDOWN = preterunicode(9)

const NCKEY_PGUP = preterunicode(10)

const NCKEY_HOME = preterunicode(11)

const NCKEY_END = preterunicode(12)

const NCKEY_F00 = preterunicode(20)

const NCKEY_F01 = preterunicode(21)

const NCKEY_F02 = preterunicode(22)

const NCKEY_F03 = preterunicode(23)

const NCKEY_F04 = preterunicode(24)

const NCKEY_F05 = preterunicode(25)

const NCKEY_F06 = preterunicode(26)

const NCKEY_F07 = preterunicode(27)

const NCKEY_F08 = preterunicode(28)

const NCKEY_F09 = preterunicode(29)

const NCKEY_F10 = preterunicode(30)

const NCKEY_F11 = preterunicode(31)

const NCKEY_F12 = preterunicode(32)

const NCKEY_F13 = preterunicode(33)

const NCKEY_F14 = preterunicode(34)

const NCKEY_F15 = preterunicode(35)

const NCKEY_F16 = preterunicode(36)

const NCKEY_F17 = preterunicode(37)

const NCKEY_F18 = preterunicode(38)

const NCKEY_F19 = preterunicode(39)

const NCKEY_F20 = preterunicode(40)

const NCKEY_F21 = preterunicode(41)

const NCKEY_F22 = preterunicode(42)

const NCKEY_F23 = preterunicode(43)

const NCKEY_F24 = preterunicode(44)

const NCKEY_F25 = preterunicode(45)

const NCKEY_F26 = preterunicode(46)

const NCKEY_F27 = preterunicode(47)

const NCKEY_F28 = preterunicode(48)

const NCKEY_F29 = preterunicode(49)

const NCKEY_F30 = preterunicode(50)

const NCKEY_F31 = preterunicode(51)

const NCKEY_F32 = preterunicode(52)

const NCKEY_F33 = preterunicode(53)

const NCKEY_F34 = preterunicode(54)

const NCKEY_F35 = preterunicode(55)

const NCKEY_F36 = preterunicode(56)

const NCKEY_F37 = preterunicode(57)

const NCKEY_F38 = preterunicode(58)

const NCKEY_F39 = preterunicode(59)

const NCKEY_F40 = preterunicode(60)

const NCKEY_F41 = preterunicode(61)

const NCKEY_F42 = preterunicode(62)

const NCKEY_F43 = preterunicode(63)

const NCKEY_F44 = preterunicode(64)

const NCKEY_F45 = preterunicode(65)

const NCKEY_F46 = preterunicode(66)

const NCKEY_F47 = preterunicode(67)

const NCKEY_F48 = preterunicode(68)

const NCKEY_F49 = preterunicode(69)

const NCKEY_F50 = preterunicode(70)

const NCKEY_F51 = preterunicode(71)

const NCKEY_F52 = preterunicode(72)

const NCKEY_F53 = preterunicode(73)

const NCKEY_F54 = preterunicode(74)

const NCKEY_F55 = preterunicode(75)

const NCKEY_F56 = preterunicode(76)

const NCKEY_F57 = preterunicode(77)

const NCKEY_F58 = preterunicode(78)

const NCKEY_F59 = preterunicode(79)

const NCKEY_F60 = preterunicode(80)

const NCKEY_ENTER = preterunicode(121)

const NCKEY_CLS = preterunicode(122)

const NCKEY_DLEFT = preterunicode(123)

const NCKEY_DRIGHT = preterunicode(124)

const NCKEY_ULEFT = preterunicode(125)

const NCKEY_URIGHT = preterunicode(126)

const NCKEY_CENTER = preterunicode(127)

const NCKEY_BEGIN = preterunicode(128)

const NCKEY_CANCEL = preterunicode(129)

const NCKEY_CLOSE = preterunicode(130)

const NCKEY_COMMAND = preterunicode(131)

const NCKEY_COPY = preterunicode(132)

const NCKEY_EXIT = preterunicode(133)

const NCKEY_PRINT = preterunicode(134)

const NCKEY_REFRESH = preterunicode(135)

const NCKEY_SEPARATOR = preterunicode(136)

const NCKEY_CAPS_LOCK = preterunicode(150)

const NCKEY_SCROLL_LOCK = preterunicode(151)

const NCKEY_NUM_LOCK = preterunicode(152)

const NCKEY_PRINT_SCREEN = preterunicode(153)

const NCKEY_PAUSE = preterunicode(154)

const NCKEY_MENU = preterunicode(155)

const NCKEY_MEDIA_PLAY = preterunicode(158)

const NCKEY_MEDIA_PAUSE = preterunicode(159)

const NCKEY_MEDIA_PPAUSE = preterunicode(160)

const NCKEY_MEDIA_REV = preterunicode(161)

const NCKEY_MEDIA_STOP = preterunicode(162)

const NCKEY_MEDIA_FF = preterunicode(163)

const NCKEY_MEDIA_REWIND = preterunicode(164)

const NCKEY_MEDIA_NEXT = preterunicode(165)

const NCKEY_MEDIA_PREV = preterunicode(166)

const NCKEY_MEDIA_RECORD = preterunicode(167)

const NCKEY_MEDIA_LVOL = preterunicode(168)

const NCKEY_MEDIA_RVOL = preterunicode(169)

const NCKEY_MEDIA_MUTE = preterunicode(170)

const NCKEY_LSHIFT = preterunicode(171)

const NCKEY_LCTRL = preterunicode(172)

const NCKEY_LALT = preterunicode(173)

const NCKEY_LSUPER = preterunicode(174)

const NCKEY_LHYPER = preterunicode(175)

const NCKEY_LMETA = preterunicode(176)

const NCKEY_RSHIFT = preterunicode(177)

const NCKEY_RCTRL = preterunicode(178)

const NCKEY_RALT = preterunicode(179)

const NCKEY_RSUPER = preterunicode(180)

const NCKEY_RHYPER = preterunicode(181)

const NCKEY_RMETA = preterunicode(182)

const NCKEY_L3SHIFT = preterunicode(183)

const NCKEY_L5SHIFT = preterunicode(184)

const NCKEY_MOTION = preterunicode(200)

const NCKEY_BUTTON1 = preterunicode(201)

const NCKEY_BUTTON2 = preterunicode(202)

const NCKEY_BUTTON3 = preterunicode(203)
